# cost-aware-finqa

./: .dockerignore  .gitattributes  .gitignore  Cost_Aware_FinQA_Training.ipynb  DESIGN.md  Dockerfile  PLAYGROUND_GUIDE.md  README.md  __init__.py  agent-context.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  test_inference.sh
data/: curate_dataset.py  financial_data.db  finqa_200.json
openenv_cost_aware_finqa.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
server/: Dockerfile  __init__.py  app.py  cost_aware_finqa_environment.py  gradio_ui.py  tools.py
